<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Weather Forecast</string>
    <string name="weather_flow">Weather Forecast</string>
    <string name="package_name">mtgtech.com.weatherFlow</string>
    <string name="version_code">v1.0</string>
    <string name="version">Version</string>
    <string name="current_location">Current location</string>
    <string name="resident_location">Resident location</string>
    <string name="default_location">default location</string>
    <string name="live">Live</string>
    <string name="today">Today</string>
    <string name="refresh_at">Refresh at</string>
    <string name="local_time">Local time</string>
    <string name="precipitation">PRECIPITATION</string>
    <string name="precipitation_probability">Precipitation probability</string>
    <string name="on">Enabled</string>
    <string name="off">Disabled</string>
    <string name="go_to_set">SET</string>
    <string name="feedback_background_location_title">Access location in background</string>
    <string name="feedback_background_location_summary">In order to allow the app to access location in background, please set location access as \"Allow all the time\".</string>
    <string name="feedback_interpret_notification_group_title">Block notification group</string>
    <string name="feedback_interpret_notification_group_content">After turning off \"Free background\", a notification indicating that background service is running will appear in the notification bar. You can turn off the Background Information Channel in the app\'s information page to block this notifications.</string>
    <string name="feedback_ignore_battery_optimizations_title">Ignore battery optimization</string>
    <string name="feedback_ignore_battery_optimizations_content">In order to ensure that the background services can continue to work, please ignore the battery optimization for GeometricWeather.</string>
    <string name="action_settings">Settings</string>
    <string name="widget_day">Daily</string>
    <string name="widget_week">Weekly</string>
    <string name="widget_day_week">Daily + Weekly</string>
    <string name="widget_clock_day_horizontal">Clock + Daily (Horizontal style)</string>
    <string name="widget_clock_day_details">Clock + Daily (Details)</string>
    <string name="widget_clock_day_vertical">Clock + Daily (Vertical style)</string>
    <string name="widget_clock_day_week">Clock + Daily + Weekly</string>
    <string name="widget_text">Text</string>
    <string name="widget_trend_daily">Daily Trend</string>
    <string name="widget_trend_hourly">Hourly Trend</string>
    <string name="widget_multi_city">Multi City</string>
    <string name="settings_category_basic">Basic</string>
    <string name="settings_title_background_free">Background Free</string>
    <string name="settings_summary_background_free_on">Enabled\nIf widgets and notification cannot refresh automatically, please turn off this option.</string>
    <string name="settings_summary_background_free_off">Disabled\nIf you do not want any services to continue working in background, please turn on this option.</string>
    <string name="settings_title_live_wallpaper">Live wallpaper</string>
    <string name="settings_summary_live_wallpaper">Set Material weather animation as live wallpaper</string>
    <string name="settings_title_service_provider">Service provider</string>
    <string name="settings_summary_service_provider">Select service provider of weather data and location information</string>
    <string name="settings_title_weather_source">Weather source</string>
    <string name="settings_title_location_service">Location service</string>
    <string name="settings_title_dark_mode">Dark mode</string>
    <string name="settings_title_ui_style">Interface style</string>
    <string name="settings_title_icon_provider">Icon pack</string>
    <string name="settings_title_appearance">Appearance</string>
    <string name="settings_summary_appearance">Interface style, card order, language…</string>
    <string name="settings_title_card_display">Displayed cards</string>
    <string name="settings_title_daily_trend_display">Display daily trend</string>
    <string name="settings_title_trend_horizontal_line_switch">Horizontal lines in trend</string>
    <string name="settings_title_exchange_day_night_temp_switch">Exchange day night temperature</string>
    <string name="settings_title_gravity_sensor_switch">Gravity sensor</string>
    <string name="settings_title_list_animation_switch">List animation</string>
    <string name="settings_title_item_animation_switch">Item animation</string>
    <string name="settings_language">Language</string>
    <string name="settings_title_unit">Units</string>
    <string name="settings_summary_unit">Set the unit of weather data</string>
    <string name="settings_title_temperature_unit">Temperature unit</string>
    <string name="settings_title_distance_unit">Distance unit</string>
    <string name="settings_title_precipitation_unit">Precipitation unit</string>
    <string name="settings_title_pressure_unit">Pressure unit</string>
    <string name="settings_title_speed_unit">Speed unit</string>
    <string name="settings_title_refresh_rate">Automatic refresh rate</string>
    <string name="settings_title_alert_notification_switch">Send Alert Notification</string>
    <string name="settings_title_precipitation_notification_switch">Send Precipitation Forecast</string>
    <string name="settings_category_forecast">Forecast</string>
    <string name="settings_title_forecast_today">Forecast for today</string>
    <string name="settings_title_forecast_today_time">Forecast time for today</string>
    <string name="settings_title_forecast_tomorrow">Forecast for tomorrow</string>
    <string name="settings_title_forecast_tomorrow_time">Forecast time for tomorrow</string>
    <string name="settings_category_widget">Widget</string>
    <string name="settings_title_week_icon_mode">Weekly icons mode</string>
    <string name="settings_title_minimal_icon">Minimalistic icons</string>
    <string name="settings_title_click_widget_to_refresh">Refresh widget when clicked</string>
    <string name="settings_title_widget_config">Widget config</string>
    <string name="settings_title_notification">Send Notification</string>
    <string name="settings_title_notification_style">Notification style</string>
    <string name="settings_title_notification_temp_icon">Temperature as status bar icon</string>
    <string name="settings_title_notification_color">Notification color</string>
    <string name="settings_title_notification_custom_color">Custom Notification Color</string>
    <string name="settings_title_notification_text_color">Text color</string>
    <string name="settings_title_notification_background">Background color</string>
    <string name="settings_notification_background_off">Follow System</string>
    <string name="settings_title_notification_can_be_cleared">Can be cleared</string>
    <string name="settings_notification_can_be_cleared_on">Can be cleared by dragging</string>
    <string name="settings_notification_can_be_cleared_off">Cannot be cleared</string>
    <string name="settings_title_notification_hide_icon">Hide notification icon</string>
    <string name="settings_notification_hide_icon_on">Hide</string>
    <string name="settings_notification_hide_icon_off">Show</string>
    <string name="settings_title_notification_hide_in_lockScreen">Hide in lock screen</string>
    <string name="settings_notification_hide_in_lockScreen_on">Hide (need to open in the system settings)</string>
    <string name="settings_notification_hide_in_lockScreen_off">Show</string>
    <string name="settings_title_notification_hide_big_view">Extended style</string>
    <string name="settings_notification_hide_big_view_on">Hide</string>
    <string name="settings_notification_hide_big_view_off">Show</string>
    <string name="key_background_free">background_free_3</string>
    <string name="key_live_wallpaper">live_wallpaper</string>
    <string name="key_service_provider">service_provider</string>
    <string name="key_weather_source">weather_source</string>
    <string name="key_location_service">location_service</string>
    <string name="key_dark_mode">dark_mode</string>
    <string name="key_ui_style">ui_style</string>
    <string name="key_icon_provider">icon_provider</string>
    <string name="key_appearance">appearance</string>
    <string name="key_card_display">card_display_2</string>
    <string name="key_daily_trend_display">daily_trend_display</string>
    <string name="key_trend_horizontal_line_switch">trend_horizontal_line_switch</string>
    <string name="key_exchange_day_night_temp_switch">exchange_day_night_temp_switch</string>
    <string name="key_gravity_sensor_switch">gravity_sensor_switch</string>
    <string name="key_list_animation_switch">list_animation_switch</string>
    <string name="key_item_animation_switch">item_animation_switch</string>
    <string name="key_language">language</string>
    <string name="key_unit">unit</string>
    <string name="key_temperature_unit">temperature_unit</string>
    <string name="key_distance_unit">distance_unit</string>
    <string name="key_precipitation_unit">precipitation_unit</string>
    <string name="key_pressure_unit">pressure_unit</string>
    <string name="key_speed_unit">speed_unit</string>
    <string name="key_refresh_rate">refresh_rate</string>
    <string name="key_alert_notification_switch">alert_notification_switch</string>
    <string name="key_precipitation_notification_switch">precipitation_notification_switch</string>
    <string name="key_forecast_today">timing_forecast_switch_today</string>
    <string name="key_forecast_today_time">forecast_time_today</string>
    <string name="key_forecast_tomorrow">timing_forecast_switch_tomorrow</string>
    <string name="key_forecast_tomorrow_time">forecast_time_tomorrow</string>
    <string name="key_week_icon_mode">week_icon_mode</string>
    <string name="key_widget_minimal_icon">widget_minimal_icon</string>
    <string name="key_click_widget_to_refresh">click_widget_to_refresh</string>
    <string name="key_widget_day">widget_day</string>
    <string name="key_widget_week">widget_week</string>
    <string name="key_widget_day_week">widget_day_week</string>
    <string name="key_widget_clock_day_horizontal">widget_clock_day_horizontal</string>
    <string name="key_widget_clock_day_details">widget_clock_day_details</string>
    <string name="key_widget_clock_day_vertical">widget_clock_day_vertical</string>
    <string name="key_widget_clock_day_week">widget_clock_day_week</string>
    <string name="key_widget_text">widget_text</string>
    <string name="key_widget_trend_daily">widget_trend_daily</string>
    <string name="key_widget_trend_hourly">widget_trend_hourly</string>
    <string name="key_widget_multi_city">widget_multi_city</string>
    <string name="key_notification">notification_switch</string>
    <string name="key_notification_style">notification_style</string>
    <string name="key_notification_minimal_icon">notification_minimal_icon</string>
    <string name="key_notification_temp_icon">notification_temp_icon_switch</string>
    <string name="key_notification_color">notification_color</string>
    <string name="key_notification_custom_color">notification_custom_color</string>
    <string name="key_notification_background_color">notification_background_color</string>
    <string name="key_notification_text_color">notification_text_color</string>
    <string name="key_notification_can_be_cleared">notification_can_clear_switch</string>
    <string name="key_notification_hide_icon">hide_notification_icon</string>
    <string name="key_notification_hide_in_lockScreen">hide_notification_in_lockScreen</string>
    <string name="key_notification_hide_big_view">hide_notification_big_view</string>
</resources>