<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title_service_provider">

    <ListPreference
        android:defaultValue="accu"
        android:dialogTitle="@string/settings_title_weather_source"
        android:entries="@array/weather_sources"
        android:entryValues="@array/weather_source_values"
        android:key="@string/key_weather_source"
        android:title="@string/settings_title_weather_source" />

    <ListPreference
        android:defaultValue="native"
        android:dialogTitle="@string/settings_title_location_service"
        android:entries="@array/location_services"
        android:entryValues="@array/location_service_values"
        android:key="@string/key_location_service"
        android:title="@string/settings_title_location_service" />

</PreferenceScreen>