<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_background_location_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorRoot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_background_location_title"
            style="@style/title_text"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/feedback_background_location_title"
            android:textSize="@dimen/large_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_background_location_summary"
            style="@style/content_text"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/feedback_background_location_summary" />

        <Button
            android:id="@+id/dialog_background_location_setButton"
            style="@style/material_button"
            android:layout_gravity="end"
            android:text="@string/go_to_set"
            android:textColor="@color/striking_red"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>