<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_running_in_background_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorRoot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/large_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/feedback_ignore_battery_optimizations_title"
            android:textColor="@color/colorTextTitle"
            android:textStyle="bold" />

        <TextView
            style="@style/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/feedback_ignore_battery_optimizations_content" />

        <Button
            android:id="@+id/dialog_running_in_background_setBtn"
            style="@style/material_button"
            android:layout_gravity="end"
            android:text="@string/go_to_set"
            android:textColor="@color/striking_red"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>